Update ModrinthModpackExportTask.java